fix find trajectories by type and study id (#45)